# demise-core

./: Cargo.toml  README.md
buffer/: Cargo.toml
buffer/src/: lib.rs
buffer/tests/: buffer_tests.rs  tests.rs
color_logger/: Cargo.toml
color_logger/src/: lib.rs
etc/: client.py
gapbuffer/: Cargo.toml
gapbuffer/src/: lib.rs
gapbuffer/tests/: gapbuffer_tests.rs
src/: actions.rs  editor.rs  main.rs
