[package]
name = "demise_core"
version = "0.1.0"
authors = ["Christopher Fu <chrisf1337@gmail.com>"]

[dependencies]
buffer = { path = "buffer" }
serde_json = "0.9"
serde = "0.9"
serde_derive = "0.9"
log = "*"
color_logger = { path = "color_logger" }
byteorder = "1.0.0"
uuid = { version = "0.3", features = ["v4"] }
